<resources>

    <string name="app_name">Fester!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Activity Titles-->
    <string name="title_dj">DJ</string>
    <string name="title_addmusic">Adicionar Música</string>

    <!--Musics-->
    <string name="delete_menu_text">Remover</string>

    <!--Navigation-->
    <string name="party">Festas</string>
    <string name="info">Informações Pessoais</string>
    <string name="passport">Passaporte</string>
    <string name="logout">Sair da Conta</string>
    <string name="settings">Configurações</string>
    <string name="aboutus">Sobre nós</string>

    <!--Passaport-->
    <string name="passport_alert">Atenção, esse passaporte é único por usuário!</string>

    <!--About Us-->
    <string name="au_version">Versão 1.0.0</string>
    <string name="au_developers">Desenvolvedores</string>

    <!--Info-->
    <string name="info_name">Nome</string>
    <string name="info_email">E-mail</string>
    <string name="info_phone">Telefone</string>
    <string name="info_photo">Alterar Foto</string>
    <string name="info_info">Deixe em branco caso não deseje editar</string>
    <string name="info_update">Atualizar Informações</string>
    <string name="title_activity_main">MainActivity</string>

    <!--Erros-->
    <string name="error_status_party">Erro na leitura do status da festa</string>
    <string name="error_role_party">Erro na leitura do papel do usuário</string>
    <string name="title_activity_party_info">PartyInfo</string>

    <!--Festas-->
    <string name="party_finished">Esta festa já foi encerrada</string>
    <string name="party_info">Informações da Festa</string>

    <string name="atualizar_dados_da_festa">Atualizar dados da festa</string>
    <string name="descri_o_da_festa">Descrição da festa</string>
    <string name="hor_rio_da_festa">Horário da festa</string>
    <string name="local_da_festa">Local da festa</string>
    <string name="nome_da_festa">Nome da festa</string>
    <string name="editar_festa">Editar festa</string>
    <string name="adicionar_vendedor">Adicionar vendedor</string>
    <string name="adicionar_administrador">Adicionar administrador</string>
    <string name="adicionar_dj">Adicionar DJ</string>
    <string name="adicionar_seguran_a">Adicionar segurança</string>
    <string name="registrar_nova_conta">Registrar Nova Conta</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nome_completo">Nome completo</string>


    <string name="button_signup">Cadastrar-se</string>
    <string name="button_login">Login</string>
    <string name="landing_welcome">Bem-vindo ao Fester!</string>

    <!-- Strings related to sign-up and login -->
    <string name="hint_name">Nome</string>
    <string name="hint_phone_number">Telefone</string>
    <string name="email_address">Endereço de email</string>
    <string name="hint_last_name">Sobrenome</string>
    <string name="hint_username">Nome de usuário</string>
    <string name="hint_password">Senha</string>

    <string name="signup_user_attributes">Para que você use o Fester, é preciso nos dar alguns detalhes:</string>
    <string name="signup_user_login_details">Defina o nome de usuário e a senha com os quais você fará login no Fester</string>

    <string name="signup_wait_dialog">Cadastrando usuário</string>
    <string name="login_wait_dialog">Fazendo login</string>

    <string name="login_input_credentials">Vamos voltar à Festa!</string>

    <string name="parties_my_parties">Minhas festas</string>
    <string name="add_party_name">Nome da festa</string>
    <string name="add_party_date">Data</string>
    <string name="add_party_time">Horário</string>
    <string name="add_party_description">Descrição</string>
    <string name="add_party_new_party_label">Nova festa</string>
    <string name="add_party_create_party">Criar festa</string>

    <string name="add_party_date_alert_dialog">Data da festa</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_party_save_event">SALVAR</string>
    <string name="add_party_place">Lugar</string>
    <string name="add_party_wait_dialog">Salvando a festa...</string>

    <string name="party_list_refreshing">Baixando sua lista de festas...</string>
    <string name="party_list_please_wait">Por favor, aguarde</string>

    <string name="all_songs_text">Todas as músicas</string>
    <string name="selected_songs_text">Músicas selecionadas</string>
    <string name="send_songs">TOCA, DJ!</string>
    <string name="telefone">Telefone</string>

</resources>