<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_permission"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.victor.fester.Admin.Permission"
    android:orientation="vertical">

    <Button android:id="@+id/btnEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E1BEE7"
        android:layout_marginTop="10dip"
        android:text="@string/editar_festa"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <Button android:id="@+id/btnAddSeller"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E1BEE7"
        android:layout_marginTop="10dip"
        android:text="@string/adicionar_vendedor"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <Button android:id="@+id/btnAddAdmin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E1BEE7"
        android:layout_marginTop="10dip"
        android:text="@string/adicionar_administrador"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <Button android:id="@+id/btnAddDj"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E1BEE7"
        android:layout_marginTop="10dip"
        android:text="@string/adicionar_dj"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

    <Button android:id="@+id/btnAddSecur"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#E1BEE7"
        android:layout_marginTop="10dip"
        android:text="@string/adicionar_seguran_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"/>

</LinearLayout>
