<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_welcome"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/layout_authentication_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            style="@style/Widget.AppCompat.Button.Colored"
            android:paddingStart="@dimen/button_bilateral_padding"
            android:paddingEnd="@dimen/button_bilateral_padding"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:paddingStart="@dimen/button_bilateral_padding"
            android:paddingEnd="@dimen/button_bilateral_padding"/>
    </LinearLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"/>

</LinearLayout>