<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victor.fester.Navigation.Fragment_Info_Update"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/info_name_update"
        android:capitalize="words"
        android:layout_gravity="center_horizontal"
        android:hint="@string/info_name"
        android:singleLine="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_info"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_photo_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_photo_camera_white_48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/info_photo"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_info_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp" />
</LinearLayout>
