<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navigation.Fragment_AboutUs"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_aboutus"
            android:layout_gravity="center"
            android:src="@drawable/fester" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/au_txt_name"
                android:layout_marginTop="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/au_version"
                android:id="@+id/au_txt_version"
                />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/au_developers"
        android:id="@+id/au_txt_developers"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Adriano Belfort de Sousa"
        android:id="@+id/au_txt_adriano_nome"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="adriano.belfort.sousa@usp.br"
        android:id="@+id/au_txt_adriano_email"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Elisa Jorge Marcatto"
        android:id="@+id/au_txt_elisa_nome"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="elisa.marcatto@usp.br"
        android:id="@+id/au_txt_elisa_email"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Victor Marcelino Nunes"
        android:id="@+id/au_txt_victor_nome"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="victor.marcelino.nunes@usp.br"
        android:id="@+id/au_txt_victor_email"
        android:layout_marginLeft="20dp" />

</LinearLayout>
